lib/parser.output
Terminals unused in grammar

   VIRGUL
   NOKTA
   IKINOKTA
   ERROR
   STRING_CONSTANT
   TIRNAK


State 66 conflicts: 19 reduce/reduce


Grammar

    0 $accept: s $end

    1 s: stm_list

    2 stm_list: stm stm_list
    3         | %empty

    4 stm: simple_stm NOKTALIVIRGUL
    5    | MAIN SOLPARANTEZ SAGPARANTEZ SOLSUSLUPAR stm_list SAGSUSLUPAR
    6    | SOLSUSLUPAR stm_list SAGSUSLUPAR

    7 $@1: %empty

    8 stm: IF SOLPARANTEZ r_ifade SAGPARANTEZ $@1 stm

    9 $@2: %empty

   10 $@3: %empty

   11 stm: WHILE $@2 SOLPARANTEZ r_ifade $@3 SAGPARANTEZ stm

   12 $@4: %empty

   13 $@5: %empty

   14 $@6: %empty

   15 $@7: %empty

   16 $@8: %empty

   17 stm: FOR SOLPARANTEZ simple_stm $@4 NOKTALIVIRGUL r_ifade $@5 NOKTALIVIRGUL $@6 simple_stm $@7 SAGPARANTEZ $@8 stm

   18 $@9: %empty

   19 $@10: %empty

   20 stm: EIF SOLPARANTEZ r_ifade $@9 SAGPARANTEZ stm $@10 ELSE stm
   21    | COUT LT LT ID NOKTALIVIRGUL
   22    | COUT LT LT p_artrazlt NOKTALIVIRGUL
   23    | COUT LT LT ID KOSELISOLPAR r_ifade KOSELISAGPAR NOKTALIVIRGUL

   24 simple_stm: ID ESIT r_ifade
   25           | ID KOSELISOLPAR r_ifade KOSELISAGPAR ESIT r_ifade
   26           | DATATYPE ID
   27           | DATATYPE ID ESIT r_ifade
   28           | DATATYPE ID KOSELISOLPAR SAYI KOSELISAGPAR
   29           | artrazlt
   30           | %empty

   31 r_ifade: r_ifade VEYA sr_ifade
   32        | r_ifade VE sr_ifade
   33        | sr_ifade

   34 sr_ifade: sr_ifade ESIT_MI ifade
   35         | sr_ifade ESITDEGIL_MI ifade
   36         | sr_ifade LT ifade
   37         | sr_ifade GT ifade
   38         | sr_ifade LTE ifade
   39         | sr_ifade GTE ifade
   40         | ifade

   41 ifade: ifade TOPLA term
   42      | ifade CIKAR term
   43      | ifade B_AND term
   44      | ifade B_OR term
   45      | ifade B_XOR term
   46      | DEGIL term
   47      | term

   48 term: term CARP factor
   49     | term BOL factor
   50     | term MOD factor
   51     | factor

   52 factor: SAYI
   53       | SOLPARANTEZ r_ifade SAGPARANTEZ
   54       | temp_id
   55       | CIKAR SAYI
   56       | CIKAR temp_id
   57       | artrazlt
   58       | AZALT SAYI
   59       | ARTTIR SAYI
   60       | SAYI AZALT
   61       | SAYI ARTTIR
   62       | DEGIL factor
   63       | KARAKTER

   64 artrazlt: AZALT ID
   65         | ARTTIR ID
   66         | ID AZALT
   67         | ID ARTTIR

   68 p_artrazlt: AZALT ID
   69           | ARTTIR ID
   70           | ID AZALT
   71           | ID ARTTIR

   72 temp_id: ID
   73        | ID KOSELISOLPAR r_ifade KOSELISAGPAR


Terminals, with rules where they appear

$end (0) 0
error (256)
TOPLA (258) 41
CIKAR (259) 42 55 56
CARP (260) 48
BOL (261) 49
MOD (262) 50
ESIT (263) 24 25 27
ARTTIR (264) 59 61 65 67 69 71
AZALT (265) 58 60 64 66 68 70
ESIT_MI (266) 34
ESITDEGIL_MI (267) 35
GT (268) 37
LT (269) 21 22 23 36
GTE (270) 39
LTE (271) 38
VEYA (272) 31
VE (273) 32
DEGIL (274) 46 62
B_OR (275) 44
B_AND (276) 43
B_XOR (277) 45
SOLPARANTEZ (278) 5 8 11 17 20 53
SAGPARANTEZ (279) 5 8 11 17 20 53
KOSELISOLPAR (280) 23 25 28 73
KOSELISAGPAR (281) 23 25 28 73
SOLSUSLUPAR (282) 5 6
SAGSUSLUPAR (283) 5 6
VIRGUL (284)
NOKTALIVIRGUL (285) 4 17 21 22 23
NOKTA (286)
IKINOKTA (287)
ELSE (288) 20
ERROR (289)
STRING_CONSTANT (290)
TIRNAK (291)
SAYI <str> (292) 28 52 55 58 59 60 61
ID <str> (293) 21 23 24 25 26 27 28 64 65 66 67 68 69 70 71 72 73
KARAKTER <str> (294) 63
DATATYPE <type_val> (295) 26 27 28
MAIN <type_val> (296) 5
FOR <type_val> (297) 17
WHILE <type_val> (298) 11
IF <type_val> (299) 8
EIF <type_val> (300) 20
COUT <type_val> (301) 21 22 23


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
s <node> (48)
    on left: 1, on right: 0
stm_list <node> (49)
    on left: 2 3, on right: 1 2 5 6
stm <node> (50)
    on left: 4 5 6 8 11 17 20 21 22 23, on right: 2 8 11 17 20
$@1 (51)
    on left: 7, on right: 8
$@2 (52)
    on left: 9, on right: 11
$@3 (53)
    on left: 10, on right: 11
$@4 (54)
    on left: 12, on right: 17
$@5 (55)
    on left: 13, on right: 17
$@6 (56)
    on left: 14, on right: 17
$@7 (57)
    on left: 15, on right: 17
$@8 (58)
    on left: 16, on right: 17
$@9 (59)
    on left: 18, on right: 20
$@10 (60)
    on left: 19, on right: 20
simple_stm <node> (61)
    on left: 24 25 26 27 28 29 30, on right: 4 17
r_ifade <node> (62)
    on left: 31 32 33, on right: 8 11 17 20 23 24 25 27 31 32 53 73
sr_ifade <node> (63)
    on left: 34 35 36 37 38 39 40, on right: 31 32 33 34 35 36 37 38
    39
ifade <node> (64)
    on left: 41 42 43 44 45 46 47, on right: 34 35 36 37 38 39 40 41
    42 43 44 45
term <node> (65)
    on left: 48 49 50 51, on right: 41 42 43 44 45 46 47 48 49 50
factor <node> (66)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63, on right: 48 49 50
    51 62
artrazlt <node> (67)
    on left: 64 65 66 67, on right: 29 57
p_artrazlt <node> (68)
    on left: 68 69 70 71, on right: 22
temp_id <node> (69)
    on left: 72 73, on right: 54 56


State 0

    0 $accept: . s $end

    ARTTIR       shift, and go to state 1
    AZALT        shift, and go to state 2
    SOLSUSLUPAR  shift, and go to state 3
    ID           shift, and go to state 4
    DATATYPE     shift, and go to state 5
    MAIN         shift, and go to state 6
    FOR          shift, and go to state 7
    WHILE        shift, and go to state 8
    IF           shift, and go to state 9
    EIF          shift, and go to state 10
    COUT         shift, and go to state 11

    NOKTALIVIRGUL  reduce using rule 30 (simple_stm)
    $default       reduce using rule 3 (stm_list)

    s           go to state 12
    stm_list    go to state 13
    stm         go to state 14
    simple_stm  go to state 15
    artrazlt    go to state 16


State 1

   65 artrazlt: ARTTIR . ID

    ID  shift, and go to state 17


State 2

   64 artrazlt: AZALT . ID

    ID  shift, and go to state 18


State 3

    6 stm: SOLSUSLUPAR . stm_list SAGSUSLUPAR

    ARTTIR       shift, and go to state 1
    AZALT        shift, and go to state 2
    SOLSUSLUPAR  shift, and go to state 3
    ID           shift, and go to state 4
    DATATYPE     shift, and go to state 5
    MAIN         shift, and go to state 6
    FOR          shift, and go to state 7
    WHILE        shift, and go to state 8
    IF           shift, and go to state 9
    EIF          shift, and go to state 10
    COUT         shift, and go to state 11

    NOKTALIVIRGUL  reduce using rule 30 (simple_stm)
    $default       reduce using rule 3 (stm_list)

    stm_list    go to state 19
    stm         go to state 14
    simple_stm  go to state 15
    artrazlt    go to state 16


State 4

   24 simple_stm: ID . ESIT r_ifade
   25           | ID . KOSELISOLPAR r_ifade KOSELISAGPAR ESIT r_ifade
   66 artrazlt: ID . AZALT
   67         | ID . ARTTIR

    ESIT          shift, and go to state 20
    ARTTIR        shift, and go to state 21
    AZALT         shift, and go to state 22
    KOSELISOLPAR  shift, and go to state 23


State 5

   26 simple_stm: DATATYPE . ID
   27           | DATATYPE . ID ESIT r_ifade
   28           | DATATYPE . ID KOSELISOLPAR SAYI KOSELISAGPAR

    ID  shift, and go to state 24


State 6

    5 stm: MAIN . SOLPARANTEZ SAGPARANTEZ SOLSUSLUPAR stm_list SAGSUSLUPAR

    SOLPARANTEZ  shift, and go to state 25


State 7

   17 stm: FOR . SOLPARANTEZ simple_stm $@4 NOKTALIVIRGUL r_ifade $@5 NOKTALIVIRGUL $@6 simple_stm $@7 SAGPARANTEZ $@8 stm

    SOLPARANTEZ  shift, and go to state 26


State 8

   11 stm: WHILE . $@2 SOLPARANTEZ r_ifade $@3 SAGPARANTEZ stm

    $default  reduce using rule 9 ($@2)

    $@2  go to state 27


State 9

    8 stm: IF . SOLPARANTEZ r_ifade SAGPARANTEZ $@1 stm

    SOLPARANTEZ  shift, and go to state 28


State 10

   20 stm: EIF . SOLPARANTEZ r_ifade $@9 SAGPARANTEZ stm $@10 ELSE stm

    SOLPARANTEZ  shift, and go to state 29


State 11

   21 stm: COUT . LT LT ID NOKTALIVIRGUL
   22    | COUT . LT LT p_artrazlt NOKTALIVIRGUL
   23    | COUT . LT LT ID KOSELISOLPAR r_ifade KOSELISAGPAR NOKTALIVIRGUL

    LT  shift, and go to state 30


State 12

    0 $accept: s . $end

    $end  shift, and go to state 31


State 13

    1 s: stm_list .

    $default  reduce using rule 1 (s)


State 14

    2 stm_list: stm . stm_list

    ARTTIR       shift, and go to state 1
    AZALT        shift, and go to state 2
    SOLSUSLUPAR  shift, and go to state 3
    ID           shift, and go to state 4
    DATATYPE     shift, and go to state 5
    MAIN         shift, and go to state 6
    FOR          shift, and go to state 7
    WHILE        shift, and go to state 8
    IF           shift, and go to state 9
    EIF          shift, and go to state 10
    COUT         shift, and go to state 11

    NOKTALIVIRGUL  reduce using rule 30 (simple_stm)
    $default       reduce using rule 3 (stm_list)

    stm_list    go to state 32
    stm         go to state 14
    simple_stm  go to state 15
    artrazlt    go to state 16


State 15

    4 stm: simple_stm . NOKTALIVIRGUL

    NOKTALIVIRGUL  shift, and go to state 33


State 16

   29 simple_stm: artrazlt .

    $default  reduce using rule 29 (simple_stm)


State 17

   65 artrazlt: ARTTIR ID .

    $default  reduce using rule 65 (artrazlt)


State 18

   64 artrazlt: AZALT ID .

    $default  reduce using rule 64 (artrazlt)


State 19

    6 stm: SOLSUSLUPAR stm_list . SAGSUSLUPAR

    SAGSUSLUPAR  shift, and go to state 34


State 20

   24 simple_stm: ID ESIT . r_ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    r_ifade   go to state 43
    sr_ifade  go to state 44
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 21

   67 artrazlt: ID ARTTIR .

    $default  reduce using rule 67 (artrazlt)


State 22

   66 artrazlt: ID AZALT .

    $default  reduce using rule 66 (artrazlt)


State 23

   25 simple_stm: ID KOSELISOLPAR . r_ifade KOSELISAGPAR ESIT r_ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    r_ifade   go to state 50
    sr_ifade  go to state 44
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 24

   26 simple_stm: DATATYPE ID .
   27           | DATATYPE ID . ESIT r_ifade
   28           | DATATYPE ID . KOSELISOLPAR SAYI KOSELISAGPAR

    ESIT          shift, and go to state 51
    KOSELISOLPAR  shift, and go to state 52

    $default  reduce using rule 26 (simple_stm)


State 25

    5 stm: MAIN SOLPARANTEZ . SAGPARANTEZ SOLSUSLUPAR stm_list SAGSUSLUPAR

    SAGPARANTEZ  shift, and go to state 53


State 26

   17 stm: FOR SOLPARANTEZ . simple_stm $@4 NOKTALIVIRGUL r_ifade $@5 NOKTALIVIRGUL $@6 simple_stm $@7 SAGPARANTEZ $@8 stm

    ARTTIR    shift, and go to state 1
    AZALT     shift, and go to state 2
    ID        shift, and go to state 4
    DATATYPE  shift, and go to state 5

    $default  reduce using rule 30 (simple_stm)

    simple_stm  go to state 54
    artrazlt    go to state 16


State 27

   11 stm: WHILE $@2 . SOLPARANTEZ r_ifade $@3 SAGPARANTEZ stm

    SOLPARANTEZ  shift, and go to state 55


State 28

    8 stm: IF SOLPARANTEZ . r_ifade SAGPARANTEZ $@1 stm

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    r_ifade   go to state 56
    sr_ifade  go to state 44
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 29

   20 stm: EIF SOLPARANTEZ . r_ifade $@9 SAGPARANTEZ stm $@10 ELSE stm

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    r_ifade   go to state 57
    sr_ifade  go to state 44
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 30

   21 stm: COUT LT . LT ID NOKTALIVIRGUL
   22    | COUT LT . LT p_artrazlt NOKTALIVIRGUL
   23    | COUT LT . LT ID KOSELISOLPAR r_ifade KOSELISAGPAR NOKTALIVIRGUL

    LT  shift, and go to state 58


State 31

    0 $accept: s $end .

    $default  accept


State 32

    2 stm_list: stm stm_list .

    $default  reduce using rule 2 (stm_list)


State 33

    4 stm: simple_stm NOKTALIVIRGUL .

    $default  reduce using rule 4 (stm)


State 34

    6 stm: SOLSUSLUPAR stm_list SAGSUSLUPAR .

    $default  reduce using rule 6 (stm)


State 35

   55 factor: CIKAR . SAYI
   56       | CIKAR . temp_id

    SAYI  shift, and go to state 59
    ID    shift, and go to state 60

    temp_id  go to state 61


State 36

   59 factor: ARTTIR . SAYI
   65 artrazlt: ARTTIR . ID

    SAYI  shift, and go to state 62
    ID    shift, and go to state 17


State 37

   58 factor: AZALT . SAYI
   64 artrazlt: AZALT . ID

    SAYI  shift, and go to state 63
    ID    shift, and go to state 18


State 38

   46 ifade: DEGIL . term
   62 factor: DEGIL . factor

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 64
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    term      go to state 65
    factor    go to state 66
    artrazlt  go to state 48
    temp_id   go to state 49


State 39

   53 factor: SOLPARANTEZ . r_ifade SAGPARANTEZ

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    r_ifade   go to state 67
    sr_ifade  go to state 44
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 40

   52 factor: SAYI .
   60       | SAYI . AZALT
   61       | SAYI . ARTTIR

    ARTTIR  shift, and go to state 68
    AZALT   shift, and go to state 69

    $default  reduce using rule 52 (factor)


State 41

   66 artrazlt: ID . AZALT
   67         | ID . ARTTIR
   72 temp_id: ID .
   73        | ID . KOSELISOLPAR r_ifade KOSELISAGPAR

    ARTTIR        shift, and go to state 21
    AZALT         shift, and go to state 22
    KOSELISOLPAR  shift, and go to state 70

    $default  reduce using rule 72 (temp_id)


State 42

   63 factor: KARAKTER .

    $default  reduce using rule 63 (factor)


State 43

   24 simple_stm: ID ESIT r_ifade .
   31 r_ifade: r_ifade . VEYA sr_ifade
   32        | r_ifade . VE sr_ifade

    VEYA  shift, and go to state 71
    VE    shift, and go to state 72

    $default  reduce using rule 24 (simple_stm)


State 44

   33 r_ifade: sr_ifade .
   34 sr_ifade: sr_ifade . ESIT_MI ifade
   35         | sr_ifade . ESITDEGIL_MI ifade
   36         | sr_ifade . LT ifade
   37         | sr_ifade . GT ifade
   38         | sr_ifade . LTE ifade
   39         | sr_ifade . GTE ifade

    ESIT_MI       shift, and go to state 73
    ESITDEGIL_MI  shift, and go to state 74
    GT            shift, and go to state 75
    LT            shift, and go to state 76
    GTE           shift, and go to state 77
    LTE           shift, and go to state 78

    $default  reduce using rule 33 (r_ifade)


State 45

   40 sr_ifade: ifade .
   41 ifade: ifade . TOPLA term
   42      | ifade . CIKAR term
   43      | ifade . B_AND term
   44      | ifade . B_OR term
   45      | ifade . B_XOR term

    TOPLA  shift, and go to state 79
    CIKAR  shift, and go to state 80
    B_OR   shift, and go to state 81
    B_AND  shift, and go to state 82
    B_XOR  shift, and go to state 83

    $default  reduce using rule 40 (sr_ifade)


State 46

   47 ifade: term .
   48 term: term . CARP factor
   49     | term . BOL factor
   50     | term . MOD factor

    CARP  shift, and go to state 84
    BOL   shift, and go to state 85
    MOD   shift, and go to state 86

    $default  reduce using rule 47 (ifade)


State 47

   51 term: factor .

    $default  reduce using rule 51 (term)


State 48

   57 factor: artrazlt .

    $default  reduce using rule 57 (factor)


State 49

   54 factor: temp_id .

    $default  reduce using rule 54 (factor)


State 50

   25 simple_stm: ID KOSELISOLPAR r_ifade . KOSELISAGPAR ESIT r_ifade
   31 r_ifade: r_ifade . VEYA sr_ifade
   32        | r_ifade . VE sr_ifade

    VEYA          shift, and go to state 71
    VE            shift, and go to state 72
    KOSELISAGPAR  shift, and go to state 87


State 51

   27 simple_stm: DATATYPE ID ESIT . r_ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    r_ifade   go to state 88
    sr_ifade  go to state 44
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 52

   28 simple_stm: DATATYPE ID KOSELISOLPAR . SAYI KOSELISAGPAR

    SAYI  shift, and go to state 89


State 53

    5 stm: MAIN SOLPARANTEZ SAGPARANTEZ . SOLSUSLUPAR stm_list SAGSUSLUPAR

    SOLSUSLUPAR  shift, and go to state 90


State 54

   17 stm: FOR SOLPARANTEZ simple_stm . $@4 NOKTALIVIRGUL r_ifade $@5 NOKTALIVIRGUL $@6 simple_stm $@7 SAGPARANTEZ $@8 stm

    $default  reduce using rule 12 ($@4)

    $@4  go to state 91


State 55

   11 stm: WHILE $@2 SOLPARANTEZ . r_ifade $@3 SAGPARANTEZ stm

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    r_ifade   go to state 92
    sr_ifade  go to state 44
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 56

    8 stm: IF SOLPARANTEZ r_ifade . SAGPARANTEZ $@1 stm
   31 r_ifade: r_ifade . VEYA sr_ifade
   32        | r_ifade . VE sr_ifade

    VEYA         shift, and go to state 71
    VE           shift, and go to state 72
    SAGPARANTEZ  shift, and go to state 93


State 57

   20 stm: EIF SOLPARANTEZ r_ifade . $@9 SAGPARANTEZ stm $@10 ELSE stm
   31 r_ifade: r_ifade . VEYA sr_ifade
   32        | r_ifade . VE sr_ifade

    VEYA  shift, and go to state 71
    VE    shift, and go to state 72

    $default  reduce using rule 18 ($@9)

    $@9  go to state 94


State 58

   21 stm: COUT LT LT . ID NOKTALIVIRGUL
   22    | COUT LT LT . p_artrazlt NOKTALIVIRGUL
   23    | COUT LT LT . ID KOSELISOLPAR r_ifade KOSELISAGPAR NOKTALIVIRGUL

    ARTTIR  shift, and go to state 95
    AZALT   shift, and go to state 96
    ID      shift, and go to state 97

    p_artrazlt  go to state 98


State 59

   55 factor: CIKAR SAYI .

    $default  reduce using rule 55 (factor)


State 60

   72 temp_id: ID .
   73        | ID . KOSELISOLPAR r_ifade KOSELISAGPAR

    KOSELISOLPAR  shift, and go to state 70

    $default  reduce using rule 72 (temp_id)


State 61

   56 factor: CIKAR temp_id .

    $default  reduce using rule 56 (factor)


State 62

   59 factor: ARTTIR SAYI .

    $default  reduce using rule 59 (factor)


State 63

   58 factor: AZALT SAYI .

    $default  reduce using rule 58 (factor)


State 64

   62 factor: DEGIL . factor

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 64
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    factor    go to state 99
    artrazlt  go to state 48
    temp_id   go to state 49


State 65

   46 ifade: DEGIL term .
   48 term: term . CARP factor
   49     | term . BOL factor
   50     | term . MOD factor

    CARP  shift, and go to state 84
    BOL   shift, and go to state 85
    MOD   shift, and go to state 86

    $default  reduce using rule 46 (ifade)


State 66

   51 term: factor .
   62 factor: DEGIL factor .

    TOPLA          reduce using rule 51 (term)
    TOPLA          [reduce using rule 62 (factor)]
    CIKAR          reduce using rule 51 (term)
    CIKAR          [reduce using rule 62 (factor)]
    CARP           reduce using rule 51 (term)
    CARP           [reduce using rule 62 (factor)]
    BOL            reduce using rule 51 (term)
    BOL            [reduce using rule 62 (factor)]
    MOD            reduce using rule 51 (term)
    MOD            [reduce using rule 62 (factor)]
    ESIT_MI        reduce using rule 51 (term)
    ESIT_MI        [reduce using rule 62 (factor)]
    ESITDEGIL_MI   reduce using rule 51 (term)
    ESITDEGIL_MI   [reduce using rule 62 (factor)]
    GT             reduce using rule 51 (term)
    GT             [reduce using rule 62 (factor)]
    LT             reduce using rule 51 (term)
    LT             [reduce using rule 62 (factor)]
    GTE            reduce using rule 51 (term)
    GTE            [reduce using rule 62 (factor)]
    LTE            reduce using rule 51 (term)
    LTE            [reduce using rule 62 (factor)]
    VEYA           reduce using rule 51 (term)
    VEYA           [reduce using rule 62 (factor)]
    VE             reduce using rule 51 (term)
    VE             [reduce using rule 62 (factor)]
    B_OR           reduce using rule 51 (term)
    B_OR           [reduce using rule 62 (factor)]
    B_AND          reduce using rule 51 (term)
    B_AND          [reduce using rule 62 (factor)]
    B_XOR          reduce using rule 51 (term)
    B_XOR          [reduce using rule 62 (factor)]
    SAGPARANTEZ    reduce using rule 51 (term)
    SAGPARANTEZ    [reduce using rule 62 (factor)]
    KOSELISAGPAR   reduce using rule 51 (term)
    KOSELISAGPAR   [reduce using rule 62 (factor)]
    NOKTALIVIRGUL  reduce using rule 51 (term)
    NOKTALIVIRGUL  [reduce using rule 62 (factor)]
    $default       reduce using rule 51 (term)


State 67

   31 r_ifade: r_ifade . VEYA sr_ifade
   32        | r_ifade . VE sr_ifade
   53 factor: SOLPARANTEZ r_ifade . SAGPARANTEZ

    VEYA         shift, and go to state 71
    VE           shift, and go to state 72
    SAGPARANTEZ  shift, and go to state 100


State 68

   61 factor: SAYI ARTTIR .

    $default  reduce using rule 61 (factor)


State 69

   60 factor: SAYI AZALT .

    $default  reduce using rule 60 (factor)


State 70

   73 temp_id: ID KOSELISOLPAR . r_ifade KOSELISAGPAR

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    r_ifade   go to state 101
    sr_ifade  go to state 44
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 71

   31 r_ifade: r_ifade VEYA . sr_ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    sr_ifade  go to state 102
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 72

   32 r_ifade: r_ifade VE . sr_ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    sr_ifade  go to state 103
    ifade     go to state 45
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 73

   34 sr_ifade: sr_ifade ESIT_MI . ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    ifade     go to state 104
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 74

   35 sr_ifade: sr_ifade ESITDEGIL_MI . ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    ifade     go to state 105
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 75

   37 sr_ifade: sr_ifade GT . ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    ifade     go to state 106
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 76

   36 sr_ifade: sr_ifade LT . ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    ifade     go to state 107
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 77

   39 sr_ifade: sr_ifade GTE . ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    ifade     go to state 108
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 78

   38 sr_ifade: sr_ifade LTE . ifade

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 38
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    ifade     go to state 109
    term      go to state 46
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 79

   41 ifade: ifade TOPLA . term

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 64
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    term      go to state 110
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 80

   42 ifade: ifade CIKAR . term

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 64
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    term      go to state 111
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 81

   44 ifade: ifade B_OR . term

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 64
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    term      go to state 112
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 82

   43 ifade: ifade B_AND . term

    CIKAR        shift, and go to state 35
    ARTTIR       shift, and go to state 36
    AZALT        shift, and go to state 37
    DEGIL        shift, and go to state 64
    SOLPARANTEZ  shift, and go to state 39
    SAYI         shift, and go to state 40
    ID           shift, and go to state 41
    KARAKTER     shift, and go to state 42

    term      go to state 113
    factor    go to state 47
    artrazlt  go to state 48
    temp_id   go to state 49


State 83

   45 ifade: ifade B_XOR . term
